--- a/DataProcessing/App.xaml
+++ b/DataProcessing/App.xaml
@@ -10,10 +10,12 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Styles/Colors.xaml" />
                 <ResourceDictionary Source="Styles/Global.xaml" />
+                <ResourceDictionary Source="Styles/Text.xaml" />
                 <ResourceDictionary Source="Styles/DataGridStyle.xaml" />
                 <ResourceDictionary Source="Styles/TextBoxStyle.xaml" />
                 <ResourceDictionary Source="Styles/ButtonStyle.xaml" />
                 <ResourceDictionary Source="Styles/NavigationStyle.xaml" />
+                <ResourceDictionary Source="Styles/TabControl.xaml" />
 
                 <ResourceDictionary>
                     <!-- Home -->
