--- a/DataProcessing/Styles/TextBoxStyle.xaml
+++ b/DataProcessing/Styles/TextBoxStyle.xaml
@@ -13,10 +13,15 @@
                         <Border Padding="{TemplateBinding Padding}"
                             BorderThickness="{TemplateBinding BorderThickness}"
                             BorderBrush="{TemplateBinding BorderBrush}"
-                            CornerRadius="3">
+                            CornerRadius="2">
                             <ScrollViewer x:Name="PART_ContentHost" />
                         </Border>
-                        <Border x:Name="disableOverview" Background="#ffffff" Opacity="0.5" Visibility="Collapsed" />
+                        <Border x:Name="disableOverview" 
+                                Background="{StaticResource ColorBrushWhite}" 
+                                BorderBrush="{StaticResource ColorBrushWhite}"
+                                BorderThickness="1 1 1 1"
+                                Opacity="0.5" 
+                                Visibility="Collapsed" />
                     </Grid>
 
                     <ControlTemplate.Triggers>
@@ -30,9 +35,12 @@
 
         <Style.Triggers>
             <Trigger Property="IsFocused" Value="True">
-                <Setter Property="BorderBrush" Value="{StaticResource PrimaryColorLightBrush}" />
+                <Setter Property="BorderBrush" Value="{StaticResource ColorBrushCyan}" />
             </Trigger>
         </Style.Triggers>
+    </Style>
+    <Style x:Key="SmallTextBox" TargetType="{x:Type TextBox}" BasedOn="{StaticResource {x:Type TextBox}}">
+        <Setter Property="Padding" Value="1 1 1 1" />
     </Style>
 
     <Style x:Key="WatermarkTextBox" TargetType="{x:Type TextBox}" BasedOn="{StaticResource {x:Type TextBox}}">
@@ -42,13 +50,13 @@
                     <Border Padding="{TemplateBinding Padding}"
                             BorderThickness="{TemplateBinding BorderThickness}"
                             BorderBrush="{TemplateBinding BorderBrush}"
-                            CornerRadius="3">
+                            CornerRadius="2">
                         <Grid>
                             <ScrollViewer x:Name="PART_ContentHost" />
                             <Label x:Name="watermark" 
                                    Content="{TemplateBinding Tag}" 
                                    Visibility="Collapsed"
-                                   Foreground="{StaticResource LabelTextColorBrush}"
+                                   Foreground="{StaticResource ColorBrushGrayText}"
                                    FontWeight="Bold"
                                    Margin="3 3 3 3"
                                    Padding="0" />
