--- a/DataProcessing/Styles/TextBoxStyle.xaml
+++ b/DataProcessing/Styles/TextBoxStyle.xaml
@@ -56,7 +56,7 @@
                             <Label x:Name="watermark" 
                                    Content="{TemplateBinding Tag}" 
                                    Visibility="Collapsed"
-                                   Foreground="{StaticResource ColorBrushGrayText}"
+                                   Foreground="{StaticResource LightGrayColorBrush}"
                                    FontWeight="Bold"
                                    Margin="3 3 3 3"
                                    Padding="0" />
