--- a/PopupServiceFront/Views/DialogYesNo.xaml
+++ b/PopupServiceFront/Views/DialogYesNo.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="DataProcessing.Views.Popups.DialogYesNo"
+﻿<UserControl x:Class="PopupServiceFront.Views.DialogYesNo"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:DataProcessing.Views.Popups"
+             xmlns:local="clr-namespace:PopupServiceFront.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
