--- a/PopupServiceFront/Views/TextDialog.xaml
+++ b/PopupServiceFront/Views/TextDialog.xaml
@@ -1,12 +1,16 @@
-﻿<UserControl x:Class="DataProcessing.Views.TextDialog"
+﻿<UserControl x:Class="PopupServiceFront.Views.TextDialog"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:DataProcessing.Views"
-             mc:Ignorable="d" 
+             xmlns:local="clr-namespace:PopupServiceFront.Views"
+             mc:Ignorable="d"
              Focusable="True"
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.InputBindings>
+        <KeyBinding Key="Enter" Command="{Binding OkCommand}" />
+    </UserControl.InputBindings>
+    
     <Grid Margin="10 10 10 10">
         <Grid.RowDefinitions>
             <!-- Name row-->
@@ -18,7 +22,7 @@
         <!-- Name -->
         <StackPanel Grid.Row="0">
             <TextBlock Text="{Binding Label}" FontWeight="SemiBold" />
-            <TextBox x:Name="txbInput" Text="{Binding Input}" />
+            <TextBox x:Name="txbInput" Text="{Binding Input, UpdateSourceTrigger=PropertyChanged}" />
         </StackPanel>
 
         <!-- Buttons -->
