--- a/DataProcessing/Views/WorkfileEditor.xaml
+++ b/DataProcessing/Views/WorkfileEditor.xaml
@@ -17,6 +17,7 @@
         <converters:BoolToColorConverter x:Key="BoolToColor" />
         <converters:BoolToThicknessConverter x:Key="BoolToThickness" />
         <converters:BoolToVisibilityConverter x:Key="BoolToVisibility" />
+        <converters:StateToVisibilityConverter x:Key="StateToVisibility" />
     </UserControl.Resources>
 
     <Grid Margin="10">
@@ -100,9 +101,10 @@
                                 <StackPanel Margin="0 10 0 0" HorizontalAlignment="Stretch">
                                     <!--Save button-->
                                     <Button Command="{Binding SaveTemplateCommand}"
-                                                Style="{StaticResource ButtonDefaultLeftAlign}"
-                                                HorizontalContentAlignment="Stretch"
-                                                Margin="0 0 0 5">
+                                            Style="{StaticResource ButtonDefaultLeftAlign}"
+                                            IsEnabled="{Binding IsTemplateSelected}"
+                                            HorizontalContentAlignment="Stretch"
+                                            Margin="0 0 0 5">
                                         <Button.Content>
                                             <Grid>
                                                 <Grid.ColumnDefinitions>
@@ -122,8 +124,9 @@
                                     </Button>
                                     <!--Save as button-->
                                     <Button Command="{Binding SaveTemplateAsCommand}"
-                                                Style="{StaticResource ButtonDefaultLeftAlign}"
-                                                Margin="0 0 0 5">
+                                            Style="{StaticResource ButtonDefaultLeftAlign}"
+                                            IsEnabled="{Binding IsTemplateSelected}"
+                                            Margin="0 0 0 5">
                                         <Button.Content>
                                             <Grid>
                                                 <Grid.ColumnDefinitions>
@@ -164,7 +167,8 @@
                                     </Button>
                                     <!--Delete button-->
                                     <Button Command="{Binding DeleteTemplateCommand}"
-                                                Style="{StaticResource ButtonDefaultLeftAlign}">
+                                            Style="{StaticResource ButtonDefaultLeftAlign}"
+                                            IsEnabled="{Binding IsTemplateSelected}">
                                         <Button.Content>
                                             <Grid>
                                                 <Grid.ColumnDefinitions>
@@ -542,10 +546,11 @@
 
                                     <!-- Paradoxical sleep <= -->
                                     <Border BorderThickness="0 0 1 0"
-                                    BorderBrush="{StaticResource ColorBrushGrayBorder}"
-                                    Padding="7"
-                                    Grid.Column="0"
-                                    Grid.Row="2">
+                                            BorderBrush="{StaticResource ColorBrushGrayBorder}"
+                                            Padding="7"
+                                            Visibility="{Binding ExportSettingsManager.SelectedState, Converter={StaticResource StateToVisibility}}"
+                                            Grid.Column="0"
+                                            Grid.Row="2">
                                         <Grid>
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="Auto" />
@@ -605,10 +610,11 @@
 
                                     <!-- Paradoxical sleep >= -->
                                     <Border BorderThickness="0 0 0 0"
-                                    BorderBrush="{StaticResource ColorBrushGrayBorder}"
-                                    Padding="7"
-                                    Grid.Column="1"
-                                    Grid.Row="2">
+                                            BorderBrush="{StaticResource ColorBrushGrayBorder}"
+                                            Padding="7"
+                                            Visibility="{Binding ExportSettingsManager.SelectedState, Converter={StaticResource StateToVisibility}}"
+                                            Grid.Column="1"
+                                            Grid.Row="2">
                                         <Grid>
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="Auto" />
